[FIX] 0030844: Error messages on preview images nearly invisible

--- a/templates/default/less/Services/Preview/delos.less
+++ b/templates/default/less/Services/Preview/delos.less
@@ -1,6 +1,6 @@
-/* general */
+/* ilPreview classes */
 .il_ContainerItemPreview {
-    font-size: 11px; 
+    font-size: 11px;
     margin-left: 10px;
 }
 .ilPreviewList {
@@ -21,6 +21,7 @@
 .ilPreviewText {
     font-size: 90%;
     margin-top: -20px;
+    color: @il-neutral-color;
 }
 .ilPreviewTextLoading {
     width: 14px;
@@ -38,8 +39,8 @@
 }
 
 .ilPreviewStatusNone {
-    filter: alpha(opacity=60); 
-    -moz-opacity: 0.60; 
+    filter: alpha(opacity=60);
+    -moz-opacity: 0.60;
     opacity: 0.60;
 }
 
